# hakoniwa

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflow/: test.yaml
.github/workflows/: main.yml
examples/: net_surfer.yaml
hakoniwa/: __init__.py  action.py  cli.py  context.py  environment.py  state.py  transition.py
hakoniwa/entity/: __init__.py  dynamic_entity.py  entity.py  hello_entity.py  llm_entity.py  openai_entity.py
llm_sim/: entity.py
notebooks/: get_stareted.ipynb
tests/: test_entity.py  test_env.yaml  test_environment.py  test_llm_entity.py  test_openai_entity.py
