[tool.poetry]
name = "hakoniwa"
version = "0.1.0"
description = ""
authors = ["Kai Sasaki <lewuathe@gmail.com>"]
readme = "README.md"
packages = [{include = "hakoniwa"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.31.0"
torch = "^2.0.1"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119